examples/test/testpolicy12708.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12708
  namespace: namespace338
spec:
  podSelector:
    matchLabels:
      key45: value35
      key46: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value40
          key36: value0
          key47: value33
      podSelector:
        matchLabels:
          key6: value20
          key11: value0
          key21: value40
